--- a/routes/LandingPage/_landingPage.css
+++ b/routes/LandingPage/_landingPage.css
@@ -35,7 +35,7 @@ b {
   font-weight: 700;
   width: 100%;
   margin: 0;
-  animation: translation-X-in 0.8s cubic-bezier(0.69, 0.28, 0.61, 0.93);
+  animation: opacity-translation-Y-in 0.7s cubic-bezier(0.48, 0.23, 0.61, 0.93);
 }
 
 .landingPage-copy p {
